--- a/WebApp/ChinookSystem.Data/ChinookSystem.Data.csproj
+++ b/WebApp/ChinookSystem.Data/ChinookSystem.Data.csproj
@@ -64,6 +64,9 @@
     <Compile Include="Entities\sysdiagram.cs" />
     <Compile Include="Entities\Track.cs" />
     <Compile Include="POCOs\AlbumsOfArtist.cs" />
+    <Compile Include="POCOs\SelectionList.cs" />
+    <Compile Include="POCOs\TrackList.cs" />
+    <Compile Include="POCOs\UserPlaylistTrack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
