--- a/WebApp/WebApp/WebApp.csproj
+++ b/WebApp/WebApp/WebApp.csproj
@@ -193,6 +193,7 @@
     <Content Include="SamplePages\DisplayArtistAlbums.aspx" />
     <Content Include="SamplePages\FilterSearchCrud.aspx" />
     <Content Include="SamplePages\ListViewCRUDODS.aspx" />
+    <Content Include="SamplePages\ManagePlaylist.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -385,6 +386,13 @@
     </Compile>
     <Compile Include="SamplePages\ListViewCRUDODS.aspx.designer.cs">
       <DependentUpon>ListViewCRUDODS.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SamplePages\ManagePlaylist.aspx.cs">
+      <DependentUpon>ManagePlaylist.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SamplePages\ManagePlaylist.aspx.designer.cs">
+      <DependentUpon>ManagePlaylist.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
